# Automate

./: CMakeLists.txt  GetFromTxt.c  GetFromTxt.h  afficherAutomate.c  afficherAutomate.h  basicFunctionDetermine.c  basicFunctionDetermine.h  basiqueFunction.c  basiqueFunction.h  complementarisation.c  complementarisation.h  complet.c  complet.h  determine.c  determine.h  genererAutomate.c  genererAutomate.h  get_from_txt.c  get_from_txt.h  initialisation.c  initialisation.h  main.c  startFunction.c  startFunction.h  strandard.c  strandard.h  structure.h  table_transition.txt
automate/: BDXB_10.txt  BDXB_12.txt  BDXB_13.txt  BDXB_14.txt  BDXB_16.txt  BDXB_18.txt  BDXB_19.txt  BDXB_20.txt  BDXB_21.txt  BDXB_22.txt  BDXB_23.txt  BDXB_25.txt  BDXB_26.txt  BDXB_30.txt  BDXB_31.txt  BDXB_32.txt  BDXB_33.txt  BDXB_34.txt  BDXB_35.txt  BDXB_37.txt  BDXB_39.txt  BDXB_40.txt  BDXB_41.txt  BDXB_42.txt  BDXB_43.txt  BDXB_44.txt  BDXB_6.txt  BDXB_7.txt  BDXB_9.txt  automate1.txt  automate11.txt  automate15.txt  automate17.txt  automate2.txt  automate24.txt  automate27.txt  automate28.txt  automate29.txt  automate3.txt  automate36.txt  (+6 more)
